// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#report() should return correctly 1`] = `
"
Inferred

  expression

to be

  inference
"
`;

exports[`#report() should return correctly with description 1`] = `
"
description

Inferred

  expression

to be

  inference
"
`;

exports[`#safe_snapshot() should return correctly with diagnostic 1`] = `"diagnostic"`;

exports[`#safe_snapshot() should return correctly with inference 1`] = `"inference"`;

exports[`#snapshot() should return correctly with diagnostic 1`] = `"diagnostic"`;

exports[`#snapshot() should return correctly with inference 1`] = `"inference"`;
